# master

./: .gitignore  Makefile.am  VERSION  autogen.pl  configure.ac
config/: Makefile.am  pmix.m4  pmix_config_subdir.m4  pmix_functions.m4  pmix_mca.m4
docs/: Makefile.am  index.rst
docs/how-things-work/: distances.rst  index.rst  timeout.rst
docs/vendors/: core.rst  definitions.rst  events.rst  groups.rst  index.rst  overview.rst  tools.rst  wireup.rst
examples/: Makefile.am  group_exchange.c
include/: Makefile.am  pmix_common.h  pmix_common.h.in
include/pmix/: pmix_common.h
man/: Makefile.am
src/: Makefile.am
src/class/: Makefile.include  pmix_hash_table.h  pmix_object.h  pmix_value_array.h
src/client/: Makefile.include  pmi1.c  pmi2.c  pmix_client.c  pmix_client_connect.c  pmix_client_fence.c  pmix_client_get.c  pmix_client_ops.h  pmix_client_pub.c  pmix_client_spawn.c
src/common/: Makefile.include  pmix_jobdata.c
src/dstore/: Makefile.include
src/event/: pmix_event.h  pmix_event_notification.c
src/include/: Makefile.include  pmix_globals.c  pmix_globals.h
src/mca/: Makefile.am  Makefile.include  mca.h
src/mca/base/: Makefile.am  base.h  help-mca-var.txt  mca_base_close.c  mca_base_component_compare.c  mca_base_component_find.c  mca_base_component_repository.c  mca_base_component_repository.h  mca_base_components_close.c  mca_base_components_open.c  mca_base_components_register.c  mca_base_components_select.c  mca_base_framework.c  mca_base_framework.h  mca_base_list.c  mca_base_open.c  mca_base_parse_paramfile.c  mca_base_var.c  mca_base_var.h  mca_base_var_enum.c  mca_base_var_enum.h  mca_base_var_group.c  mca_base_var_group.h  mca_base_vari.h
src/mca/bfrops/: Makefile.am  bfrop_types.h  bfrops.h
src/mca/bfrops/base/: Makefile.am  Makefile.include  base.h  bfrop_base_pack.c  bfrop_base_unpack.c  bfrop_frame.c
src/mca/bfrops/pmix11/: Makefile.am
src/mca/dl/: Makefile.am  configure.m4  dl.h
src/mca/dl/base/: base.h  dl_base_close.c  dl_base_fns.c  dl_base_open.c  dl_base_select.c
src/mca/dl/dlopen/: Makefile.am  configure.m4  dl_dlopen.h  dl_dlopen_component.c  dl_dlopen_module.c
src/mca/dl/libltdl/: Makefile.am  configure.m4  dl_libltdl.h  dl_libltdl_component.c  dl_libltdl_module.c
src/mca/gds/ds12/: gds_dstore.c  pmix_esh.c
src/mca/gds/hash/: gds_hash.c
src/mca/installdirs/: Makefile.am  configure.m4  installdirs.h
src/mca/installdirs/base/: base.h  installdirs_base_components.c  installdirs_base_expand.c
src/mca/installdirs/config/: Makefile.am  configure.m4  install_dirs.h.in  pmix_installdirs_config.c
src/mca/installdirs/env/: Makefile.am  configure.m4  pmix_installdirs_env.c
src/mca/pgpu/nvd/: pgpu_nvd.c
src/mca/pmdl/: pmdl.h
src/mca/pmdl/base/: base.h  pmdl_base_frame.c  pmdl_base_stubs.c
src/mca/pmdl/ompi/: pmdl_ompi.c
src/mca/pmdl/ompi5/: pmdl_ompi5.c
src/mca/pnet/cornelis/: Makefile.am  configure.m4  pnet_cornelis.c  pnet_cornelis.h  pnet_cornelis_component.c
src/mca/ptl/base/: ptl_base_sendrecv.c
src/mca/ptl/tcp/: ptl_tcp.c
src/runtime/: pmix_init.c
src/sec/: Makefile.include
src/server/: Makefile.include  pmix_server.c  pmix_server_get.c  pmix_server_group.c  pmix_server_listener.c  pmix_server_ops.c  pmix_server_regex.c
src/sm/: Makefile.include
src/usock/: Makefile.include  usock.c  usock.h
src/util/: Makefile.include  cmd_line.c  cmd_line.h  error.c  hash.c  keyval_parse.c  keyval_parse.h  path.c  path.h  pmix_cmd_line.c  show_help.c  show_help.h
src/util/keyval/: Makefile.am
test/: Makefile.am  test_common.c  test_resolve_peers.c
test/simple/: simptest.c
